[tool.poetry]
name = "graphiti-core"
version = "0.4.2"
description = "A temporal graph building library"
authors = [
    "Paul Paliychuk <paul@getzep.com>",
    "Preston Rasmussen <preston@getzep.com>",
    "Daniel Chalef <daniel@getzep.com>",
]
readme = "README.md"
license = "Apache-2.0"

packages = [{ include = "graphiti_core", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
neo4j = "^5.23.0"
diskcache = "^5.6.3"
openai = "^1.53.0"
tenacity = "^8.2.0" 
numpy = ">=1.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
